<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--CatVC-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="CatVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="CatVC" customModule="CatApi" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="2cJ-rj-hNB">
                                <rect key="frame" x="8" y="20" width="359" height="29"/>
                                <segments>
                                    <segment title="All"/>
                                    <segment title="JPG"/>
                                    <segment title="PNG"/>
                                    <segment title="GIF"/>
                                    <segment title="Favorite"/>
                                </segments>
                                <connections>
                                    <action selector="segCntrlAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="0Ep-j9-z6W"/>
                                </connections>
                            </segmentedControl>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="200" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XvU-1X-081">
                                <rect key="frame" x="0.0" y="63" width="375" height="604"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="2cJ-rj-hNB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3Kd-Im-kOA"/>
                            <constraint firstItem="XvU-1X-081" firstAttribute="top" secondItem="2cJ-rj-hNB" secondAttribute="bottom" constant="15" id="41j-Dd-lj7"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XvU-1X-081" secondAttribute="trailing" id="guf-hK-J5Y"/>
                            <constraint firstItem="XvU-1X-081" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="l2u-Py-Euv"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2cJ-rj-hNB" secondAttribute="trailing" constant="8" id="m7U-JI-mLR"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XvU-1X-081" secondAttribute="bottom" id="vKM-LO-HaC"/>
                            <constraint firstItem="2cJ-rj-hNB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="xgy-NU-mof"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="xQr-bA-xcF"/>
                    <connections>
                        <outlet property="segmentedCntrl" destination="2cJ-rj-hNB" id="YBr-1F-STq"/>
                        <outlet property="tableView" destination="XvU-1X-081" id="XDd-2J-4Z8"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="945" y="-573"/>
        </scene>
    </scenes>
</document>
