//
//  TestCatVC.swift
//  CatApiUITests
//
//  Created by Mike Saradeth on 3/17/19.
//  Copyright © 2019 Mike Saradeth. All rights reserved.
//
//
//import XCTest
//@testable import CatApi
//
//class TestCatVC: XCTestCase {
////    var cat = Cat(breads: [], id: "1", url: "https://cdn2.thecatapi.com/images/4ni.jpg", isMyFavorite: false)
////    var cat2 = Cat(breads: [], id: "2", url: "https://cdn2.thecatapi.com/images/4ni.png", isMyFavorite: false)
////    var cat22 = Cat(breads: [], id: "22", url: "https://cdn2.thecatapi.com/images/4ni.png", isMyFavorite: false)
////    var cat3 = Cat(breads: [], id: "3", url: "https://cdn2.thecatapi.com/images/4ni.gif", isMyFavorite: false)
////    var cat33 = Cat(breads: [], id: "33", url: "https://cdn2.thecatapi.com/images/4ni.gif", isMyFavorite: false)
////    var cat333 = Cat(breads: [], id: "333", url: "https://cdn2.thecatapi.com/images/4ni.gif", isMyFavorite: false)
////    
//    var app: XCUIApplication!
////    var catVC: CatVC!
////    var viewModel:CatViewModel!
//}
//
//
//extension TestCatVC {
//    
//    func testSegmentedControl() {
//        let app = XCUIApplication()
//        app.buttons["Slide"].tap()
//        app.staticTexts["Get as close as you can to: "].tap()
//        
//        let allButton = app.segmentedControls.buttons["All"]
//        let jpegButton = app.segmentedControls.buttons["JPEG"]
////        let pngButton = app.segmentedControls.buttons["PNG"]
////        let gifButton = app.segmentedControls.buttons["GIF"]
////        let favoriteButton = app.segmentedControls.buttons["Favorite"]
//        
//  
//        if allButton.isSelected {
//            XCTAssertTrue(allButton.exists)
//            XCTAssertFalse(allButton.exists)
//            
//            allButton.tap()
////            XCTAssertTrue(allButton.exists)
////            XCTAssertFalse(slideLabel.exists)
//        } else if jpegButton.isSelected {
////            XCTAssertTrue(typeLabel.exists)
////            XCTAssertFalse(slideLabel.exists)
//            
//            jpegButton.tap()
////            XCTAssertTrue(slideLabel.exists)
////            XCTAssertFalse(typeLabel.exists)
//        }
//        
//    }
//    
//}
